--- a/02 string.ipynb
+++ b/02 string.ipynb
@@ -23,28 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6a854679-4c79-43c4-8734-ccc127ee6ff3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hi my name is hareet'"
+       "'hi my name is harjeet'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"hi my name is hareet\"\"\""
+    "\"\"\"hi my name is harjeet\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "2f89d33d-bb10-415f-b423-51d35529b4d0",
    "metadata": {},
    "outputs": [
@@ -81,6 +81,100 @@
    ],
    "source": [
     "type(\"shubham\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fe2a30dd-a2ba-4c5a-935a-27ad76570cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= 'sahil'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d7060d70-f1a8-448a-8348-a225109d2f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sahil'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fca37ec2-78d9-442e-9a77-ba30a665acb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sahil'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'sahil'.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b517b659-0435-4463-81d3-da1056dc23e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SAHIL'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'sahil'.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a9aae773-f3f3-4600-9444-9d7c406ec045",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'sahil'.count('l')"
    ]
   },
   {
@@ -190,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "96394916-943d-4c44-af0f-25e5d85d03c7",
    "metadata": {},
    "outputs": [],
@@ -200,7 +294,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "id": "cbbed081-7856-4c1a-8812-25e69012544c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.find('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "d51eab8c-203f-4704-a515-8c41c3fc1edf",
    "metadata": {},
    "outputs": [
@@ -210,7 +325,7 @@
        "4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "65e52faf-8f4f-4b19-840a-5b4fd654a120",
    "metadata": {},
    "outputs": [],
@@ -294,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2a604038-d8f8-4ed7-ade3-8a292174726e",
    "metadata": {},
    "outputs": [],
@@ -494,18 +609,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "f7431749-dd71-49f0-b6cc-e9ea711997bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"shubham\"\n",
-    "salary = 80000"
+    "salary = 80000\n",
+    "city = 'delhi'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "b11c3862-3d3b-4579-bf4d-c266296f45b4",
    "metadata": {},
    "outputs": [
@@ -515,7 +631,7 @@
        "'hi my name is akash and my salary is 80000'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "2ea83f31-7797-4e5c-8563-0ff154d956ed",
    "metadata": {},
    "outputs": [
@@ -536,7 +652,7 @@
        "'hi my name is shubham'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "6632cf93-c663-4932-aa3a-97ec6c22d220",
    "metadata": {},
    "outputs": [
@@ -557,7 +673,7 @@
        "'hi my name is abhi jr and my salary is 80000'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,50 +684,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
+   "id": "60bd4ecb-7032-41c4-ac70-e64067d0e930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name= 'harry'\n",
+    "salary= 50000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "95cd74ac-f41d-4bec-9c31-2a08670a2f4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my name is harry and my salary is 50000'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .format is used to add values\n",
+    "'my name is {} and my salary is {}'.format('harry', 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "66292b9d-1b9f-4e56-8d8c-7f88e6f50906",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hi my name is abhi jr and my salary is 80000. i am of abhi'"
+       "'hi my name is abhi jr and my salary is 80000. i am jr of abhi'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"hi my name is {0} jr and my salary is {1}. i am of {0}\".format(\"abhi\", 80000)"
+    "\"hi my name is {0} jr and my salary is {1}. i am jr of {0}\".format(\"abhi\", 80000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "80bb5000-f8b8-408f-b373-46ee5f07c734",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'delhi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhi my name is abhi \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m jr and my salary is \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m. iam of \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m. i live in \u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mabhi\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m80000\u001b[39m, delhi)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'delhi' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'hi my name is abhi abhi jr and my salary is 80000. iam of abhi. i live in delhi'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"hi my name is abhi {0} jr and my salary is {1}. iam of {0}. i live in {2}\".format(\"abhi\", 80000, delhi)"
+    "\"hi my name is abhi {0} jr and my salary is {1}. iam of {0}. i live in {2}\".format(\"abhi\", 80000, 'delhi')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "b72ba9ba-ed06-4cf8-a606-6da7a3ae1256",
    "metadata": {},
    "outputs": [],
@@ -624,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "ab50ba74-9601-4124-81a1-79f364018db8",
    "metadata": {},
    "outputs": [
@@ -634,7 +782,7 @@
        "'hi my name is abhi, and my age is 20, and my salary is 75000, and my place is delhi'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2093,11 +2241,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a97cad-786c-4abd-a4a4-9387c6cdd693",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = \"seema jangra\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "80fbdd7c-b22f-4702-9435-bb774e3c70fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'seema j'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[0:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b678ef7c-cdd6-4e4b-b189-c75493bc7e5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Name = \"mamta\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fd46ff51-01cd-4d43-9d53-46ce1ac0b385",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Name.find('m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f90821e-bd3d-4f67-82da-0fd0daa1b7b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'mamta'="
+   ]
   }
  ],
  "metadata": {
