--- a/15 Functions .ipynb
+++ b/15 Functions .ipynb
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "2a99dba1-b917-4b51-9e21-b50ba84deb35",
    "metadata": {},
    "outputs": [],
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "id": "4c77f7c3-14b1-4be6-9a96-6de133accd6f",
    "metadata": {},
    "outputs": [],
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "7baf968c-941c-4941-9745-3495e13d3a29",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "9142cdd8-e370-42a0-9d1b-52efe7c0ad2b",
    "metadata": {},
    "outputs": [
@@ -1552,7 +1552,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "id": "1cfddfc5-8de4-4efd-a049-fe5e922cc28b",
    "metadata": {},
    "outputs": [],
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "ade8a286-15cb-45cc-831f-9d35706097b2",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1583,7 @@
        "[1, 4, 9]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,17 +1708,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "id": "68c85670-24bd-423a-abfb-4374849964c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = lambda x, y: x*y="
+    "z = lambda x, y: x*y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "id": "b060ff8f-bbee-4d63-b7df-4c827f8a7096",
    "metadata": {},
    "outputs": [
@@ -1728,7 +1728,7 @@
        "30"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 36,
    "id": "c3f8482c-7810-4961-8089-6c1272904dc8",
    "metadata": {},
    "outputs": [],
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 37,
    "id": "7ababc32-dc62-4733-9557-929a750ac36d",
    "metadata": {},
    "outputs": [],
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 38,
    "id": "cf90fdc6-2b33-47e3-bd56-3b0203bf3c0d",
    "metadata": {},
    "outputs": [],
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 39,
    "id": "1867b6a8-f505-45d6-80b2-4577cbfcebd9",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1820,7 @@
        "[50, 120, 210, 320, 450]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,6 +1828,150 @@
    "source": [
     "list(map(z, a, b))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "936e6d09-da3f-4fb0-bf37-6f9ef5e8b1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= lambda d, e, f: d*e*f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "697f2575-9f0e-42ee-85f4-0d48cdec9983",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15120"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z(28, 12, 45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "20186ba8-65df-4fb2-9456-49083a077759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= lambda j, k, l: j*k*l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4bcddbbd-f0be-4307-a2b5-afb6fff5999a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [2, 4, 6]\n",
+    "b = [4, 6, 8]\n",
+    "c = [3, 5, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b374f5a9-3a67-474e-8cdc-0cd5c2364409",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[24, 120, 336]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(z, a, b, c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1870fedf-7056-403b-870a-bf9f10317dce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= lambda x, y: x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "01a5c8d2-7ff1-410d-b55c-205030b1a73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2136"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z(24, 89)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4e9a117b-4053-453c-979d-8b8ddcc5b810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"seema jangra\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "db97e193-4e65-4742-9d7f-928094f4531a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ce12daf-6f3b-472b-994a-0a5e78dab25d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
