--- a/16 Try and Except .ipynb
+++ b/16 Try and Except .ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "91029735-3c45-479b-8b01-5c290e822154",
    "metadata": {},
    "outputs": [
@@ -49,14 +49,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hii\n",
+      "hy\n",
       "did not work\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    print('hii')\n",
+    "    print('hy')\n",
     "    print(5/0)\n",
     "    print('hello')\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "39a8df22-32db-4510-96d8-27d6be714ecb",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "# Else only works when there is no error facing in code\n",
+    "# Else only works when there is no error in code\n",
     "try:\n",
     "    print('hii')\n",
     "    print(5)\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "6b6c55d6-7a95-4cac-9317-5fddce90f220",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "# finally condition works in every situation even either there is error or not\n",
+    "# finally condition works in every situation either there is error or not\n",
     "try:\n",
     "    print('hii')\n",
     "    print(5)\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "c91ab3b5-7d8d-4f12-babd-53e1f1b644e3",
    "metadata": {},
    "outputs": [
@@ -187,14 +187,14 @@
     "except:\n",
     "    (\"error\")\n",
     "else:\n",
-    "    print('did not work')\n",
+    "    print('no error')\n",
     "finally:\n",
     "    print('else worikng')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "0b95b1a8-afe1-4059-97e4-fae165cb330f",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
    "source": [
     "try:\n",
     "    print('hii')\n",
-    "    print(int(\"happy\"))\n",
+    "    print(int(happy))\n",
     "    print('hello')\n",
     "\n",
     "except ZeroDivisionError as e:\n",
@@ -219,14 +219,14 @@
     "except:\n",
     "    print(\"error\")\n",
     "else:\n",
-    "    print('did not work')\n",
+    "    print('no error')\n",
     "finally:\n",
     "    print('else worikng')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "81292536-f5ce-4320-9805-a319f49e4420",
    "metadata": {},
    "outputs": [
@@ -234,14 +234,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " harjeet\n"
+      " hap45\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "invalid literal for int() with base 10: 'harjeet'\n",
+      "invalid literal for int() with base 10: 'hap45'\n",
       "close file\n"
      ]
     }
@@ -257,14 +257,14 @@
     "except ZeroDivisionError as z:\n",
     "    print(\"check something\")\n",
     "else:\n",
-    "    print(\"everthing worked fine\")\n",
+    "    print(\"everything worked fine\")\n",
     "finally:\n",
     "    print(\"close file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "f1241438-5eb0-4478-86a6-cae23bfabd03",
    "metadata": {},
    "outputs": [
@@ -272,15 +272,15 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 2500\n"
+      " 30\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2\n",
-      "everthing worked fine\n",
+      "16.666666666666668\n",
+      "everything worked fine\n",
       "close file\n"
      ]
     }
@@ -296,7 +296,7 @@
     "except ZeroDivisionError as z:\n",
     "    print(\"check something\")\n",
     "else:\n",
-    "    print(\"everthing worked fine\")\n",
+    "    print(\"everything worked fine\")\n",
     "finally:\n",
     "    print(\"close file\")"
    ]
