--- a/02 string.ipynb
+++ b/02 string.ipynb
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "b4500032-89e2-45a1-971f-633016b2b380",
    "metadata": {},
    "outputs": [
@@ -981,12 +981,13 @@
        "'harjeet'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# strip is used to remove space\n",
     "\" harjeet \".strip()"
    ]
   },
@@ -2303,13 +2304,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "7f178ed9-f19c-4857-b983-3527aef84e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my name is harry, and my salary is 50000, and my job is it sector, and my qualification is b.tech'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"my name is {0}, and my salary is {1}, and my job is {2}, and my qualification is {3}\".format(\"harry\", 50000, \"it sector\", \"b.tech\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6f90821e-bd3d-4f67-82da-0fd0daa1b7b2",
+   "id": "644ea7a2-5e66-4012-ac96-882eb9804225",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'mamta'="
-   ]
+   "source": []
   }
  ],
  "metadata": {
