--- a/17 TicTacToe.ipynb
+++ b/17 TicTacToe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed4248fb-2011-4934-a73f-e28e0afce06f",
+   "id": "3fbdbdbf-5b97-478c-ad7c-4d60dc21e3b0",
    "metadata": {},
    "source": [
     "### display"
@@ -10,7 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
+   "id": "74d88ad3-495a-440d-8f0a-71da62c5934e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "45aeee7b-8a44-48a5-9ff2-b23fa027024e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "id": "b2f35219-c328-49d3-ba43-55319f2690bf",
    "metadata": {},
    "outputs": [
@@ -30,7 +40,7 @@
        "[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,17 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "d656f8d8-a5ac-4a35-b5c4-a12a262feb23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "li[5] = \"x\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "16590b71-d9af-48ed-ae4b-1ba3c9086967",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "id": "020213f9-48f2-4220-be45-a7a5b2b92272",
    "metadata": {},
    "outputs": [
@@ -74,11 +74,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "o  |     |   \n",
+      "   |     |   \n",
       "--------------\n",
-      "   |  x  |   \n",
+      "   |     |   \n",
       "--------------\n",
-      "   |     |  x\n"
+      "   |     |   \n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "id": "e58bd90d-a56b-4243-89c3-fce407f0f34a",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
+   "id": "d656f8d8-a5ac-4a35-b5c4-a12a262feb23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li[5] = \"o\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cb78731c-8818-4296-8a99-706562712b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_position_empty(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "56d9eb35-2330-4677-9fcd-a152cc2bf408",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_position_empty(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "0079e9ac-f871-49d0-9436-e412dfbc3090",
    "metadata": {},
    "outputs": [],
@@ -112,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "id": "9021a526-e9aa-4a07-a4d9-a735522bae9f",
    "metadata": {},
    "outputs": [],
@@ -123,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "cddc32d1-f05f-4318-8640-d97da6cab873",
    "metadata": {},
    "outputs": [],
@@ -133,38 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "cb78731c-8818-4296-8a99-706562712b33",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "check_position_empty(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "id": "47311489-6125-4148-b6ca-34be3f8bc9de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "position = True"
+    "position = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "id": "07a88d3a-b179-4cad-bc9b-2b7416b6a87a",
    "metadata": {},
    "outputs": [
@@ -172,7 +203,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "None happy\n"
+      "None nh\n"
      ]
     },
     {
@@ -186,7 +217,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "None 67\n"
+      "None 7\n"
      ]
     }
    ],
@@ -201,12 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "902bb926-1277-403b-a0de-5af85e3fb8c0",
+   "execution_count": 73,
+   "id": "0f327548-c5cb-48c2-8db9-0ca129c56905",
    "metadata": {},
    "outputs": [],
    "source": [
     "def empty_positions():\n",
+    "    #print(li)\n",
     "    ans = []\n",
     "    for i in range(1, len(li)):\n",
     "        if li[i] == \" \":\n",
@@ -216,17 +248,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "2989d3d7-590b-4e27-8b38-393c7b44afce",
+   "execution_count": 72,
+   "id": "573da139-ee53-4b04-ad93-ed17121db449",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', 'X', 'O', 'X', 'O', 'O', 'X', 'O', 'X', 'O']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[1, 2, 4, 6, 8, 9]"
+       "[]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 47,
    "id": "336cd062-4d17-467c-b06f-a7d938480813",
    "metadata": {},
    "outputs": [],
@@ -255,12 +294,13 @@
     "                return position\n",
     "            else:\n",
     "                print(f'please provide a number among {available}')\n",
-    "                position = None"
+    "                position = None\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 48,
    "id": "0043895f-cc10-4ebc-94d1-c24f107762e0",
    "metadata": {},
    "outputs": [
@@ -268,30 +308,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "please choose among[1, 2, 4, 6, 8, 9] 45\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "please provide a number among [1, 2, 4, 6, 8, 9]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "please choose among[1, 2, 4, 6, 8, 9] 8\n"
+      "please choose among[1, 2, 3, 4, 5, 6, 7, 8, 9] 5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "8"
+       "5"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,8 +328,236 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "id": "f2eaa8f4-b777-4484-bdf5-8dbf8350bbc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_win():\n",
+    "    # horizontal\n",
+    "    if (li[7]==li[8]==li[9]!=\" \") or \\\n",
+    "    (li[4]==li[5]==li[6]!=\" \") or \\\n",
+    "    (li[1]==li[2]==li[3]!=\" \") or \\\n",
+    "    (li[7]==li[4]==li[1]!=\" \") or \\\n",
+    "    (li[8]==li[5]==li[2]!=\" \") or \\\n",
+    "    (li[9]==li[6]==li[3]!=\" \") or \\\n",
+    "    (li[7]==li[5]==li[3]!=\" \") or \\\n",
+    "    (li[1]==li[5]==li[9]!=\" \"):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "53d8ed4a-86c7-4525-8bd0-26da57fa0b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_win()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "792459ff-b72a-49d6-a64e-4221e406227e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def board_full():\n",
+    "    \n",
+    "    if len(empty_positions())==0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "fbe730c3-4504-46dd-8e96-ec3b22f70831",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board_full()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "de6f20bc-c72b-445e-853e-27282c1ede6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ', 'X', 'O', 'X', 'O', 'O', 'X', 'O', 'X', 'O']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "45b26446-c658-4ec9-a753-7c6cea391810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_marker(marker):\n",
+    "    if marker == \"O\":\n",
+    "        return \"X\"\n",
+    "    else:\n",
+    "        return \"O\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "82934139-1679-41d8-9efe-7acd1ccafa31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board_full()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "74501882-2a7c-4a35-a8d3-abffea86a665",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O  |     |   \n",
+      "--------------\n",
+      "X  |  O  |  X\n",
+      "--------------\n",
+      "O  |  X  |  O\n",
+      "congratulations O won the game\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = [\" \"]*10\n",
+    "game = True\n",
+    "marker = \"O\"\n",
+    "while game:\n",
+    "    display()\n",
+    "    position = take_position()\n",
+    "    put_marker(position, marker)\n",
+    "    clear_output()\n",
+    "    display()\n",
+    "    if check_win():\n",
+    "        print(f\"congratulations {marker} won the game\")\n",
+    "        game = False\n",
+    "        break\n",
+    "    elif board_full():\n",
+    "        print(f\"board full, game draw, do you want to play again\")\n",
+    "        game = False\n",
+    "        break\n",
+    "    else:\n",
+    "        marker = change_marker(marker)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "de7ec317-8611-4c11-b043-07c7824d792a",
+   "id": "a9882855-3cc8-44f9-bccc-abfa5938b06a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X  |  O  |  O\n",
+      "--------------\n",
+      "O  |  O  |  X\n",
+      "--------------\n",
+      "X  |  X  |  O\n",
+      "board full, game draw, do you want to play again\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = [\" \"]*10\n",
+    "game = True\n",
+    "marker = \"O\"\n",
+    "display()\n",
+    "while game:\n",
+    "    position = take_position()\n",
+    "    put_marker(position, marker)\n",
+    "    clear_output()\n",
+    "    display()\n",
+    "    if check_win():\n",
+    "        print(f\"congratulations {marker} won the game\")\n",
+    "        game = False\n",
+    "        break\n",
+    "    elif board_full():\n",
+    "        print(f'board full, game draw, do you want to play again')\n",
+    "        playAgain = input('do you want to play again, yes, no?')\n",
+    "        try:\n",
+    "            if playAgain[0] in ('y', \"Y\"):\n",
+    "                li = [\" \"]*10\n",
+    "                print(\"new game\")\n",
+    "                display()\n",
+    "                game = True\n",
+    "            else:\n",
+    "                game = False\n",
+    "                break\n",
+    "        except:\n",
+    "            game = False\n",
+    "            break\n",
+    "    else:\n",
+    "        marker = change_marker(marker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c9d498-3f25-4514-b5d0-70da035fbb78",
    "metadata": {},
    "outputs": [],
    "source": []
