--- a/ TicTacToe.ipynb
+++ b/ TicTacToe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "74d88ad3-495a-440d-8f0a-71da62c5934e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "45aeee7b-8a44-48a5-9ff2-b23fa027024e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b2f35219-c328-49d3-ba43-55319f2690bf",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "16590b71-d9af-48ed-ae4b-1ba3c9086967",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "020213f9-48f2-4220-be45-a7a5b2b92272",
    "metadata": {},
    "outputs": [
@@ -74,11 +74,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   |     |   \n",
+      "X  |  X  |  O\n",
       "--------------\n",
-      "   |     |   \n",
+      "O  |  O  |  X\n",
       "--------------\n",
-      "   |     |   \n"
+      "X  |  O  |  O\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e58bd90d-a56b-4243-89c3-fce407f0f34a",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d656f8d8-a5ac-4a35-b5c4-a12a262feb23",
    "metadata": {},
    "outputs": [],
@@ -112,8 +112,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cb78731c-8818-4296-8a99-706562712b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_position_empty(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56d9eb35-2330-4677-9fcd-a152cc2bf408",
    "metadata": {},
    "outputs": [
     {
@@ -128,33 +149,12 @@
     }
    ],
    "source": [
-    "check_position_empty(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "56d9eb35-2330-4677-9fcd-a152cc2bf408",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "check_position_empty(7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "0079e9ac-f871-49d0-9436-e412dfbc3090",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9021a526-e9aa-4a07-a4d9-a735522bae9f",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "cddc32d1-f05f-4318-8640-d97da6cab873",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "47311489-6125-4148-b6ca-34be3f8bc9de",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "07a88d3a-b179-4cad-bc9b-2b7416b6a87a",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "None nh\n"
+      "None rr\n"
      ]
     },
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "0f327548-c5cb-48c2-8db9-0ca129c56905",
    "metadata": {},
    "outputs": [],
@@ -248,24 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "573da139-ee53-4b04-ad93-ed17121db449",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[' ', 'X', 'O', 'X', 'O', 'O', 'X', 'O', 'X', 'O']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[]"
+       "[1, 2, 4, 6, 8, 9]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "336cd062-4d17-467c-b06f-a7d938480813",
    "metadata": {},
    "outputs": [],
@@ -300,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "0043895f-cc10-4ebc-94d1-c24f107762e0",
    "metadata": {},
    "outputs": [
@@ -308,16 +301,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "please choose among[1, 2, 3, 4, 5, 6, 7, 8, 9] 5\n"
+      "please choose among[1, 2, 4, 6, 8, 9] 9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "9"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "f2eaa8f4-b777-4484-bdf5-8dbf8350bbc0",
    "metadata": {},
    "outputs": [],
@@ -350,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "id": "53d8ed4a-86c7-4525-8bd0-26da57fa0b88",
    "metadata": {},
    "outputs": [
@@ -360,7 +353,7 @@
        "False"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "id": "792459ff-b72a-49d6-a64e-4221e406227e",
    "metadata": {},
    "outputs": [],
@@ -386,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "id": "fbe730c3-4504-46dd-8e96-ec3b22f70831",
    "metadata": {},
    "outputs": [
@@ -396,7 +389,7 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,17 +400,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "de6f20bc-c72b-445e-853e-27282c1ede6a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[' ', 'X', 'O', 'X', 'O', 'O', 'X', 'O', 'X', 'O']"
+       "[' ', ' ', ' ', 'x', ' ', 'o', ' ', 'o', ' ', ' ']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "45b26446-c658-4ec9-a753-7c6cea391810",
    "metadata": {},
    "outputs": [],
@@ -442,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 38,
    "id": "82934139-1679-41d8-9efe-7acd1ccafa31",
    "metadata": {},
    "outputs": [
@@ -452,7 +445,7 @@
        "True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "74501882-2a7c-4a35-a8d3-abffea86a665",
    "metadata": {},
    "outputs": [
@@ -471,12 +464,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O  |     |   \n",
+      "X  |  O  |  O\n",
       "--------------\n",
-      "X  |  O  |  X\n",
+      "O  |  O  |  X\n",
       "--------------\n",
-      "O  |  X  |  O\n",
-      "congratulations O won the game\n"
+      "X  |  X  |  O\n",
+      "board full, game draw, do you want to play again\n"
      ]
     }
    ],
@@ -504,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "a9882855-3cc8-44f9-bccc-abfa5938b06a",
    "metadata": {},
    "outputs": [
@@ -512,12 +505,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X  |  O  |  O\n",
+      "X  |  X  |  O\n",
       "--------------\n",
       "O  |  O  |  X\n",
       "--------------\n",
-      "X  |  X  |  O\n",
+      "X  |  O  |  O\n",
       "board full, game draw, do you want to play again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "do you want to play again, yes, no? no\n"
      ]
     }
    ],
