--- a/17 Recursion .ipynb
+++ b/17 Recursion .ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "798cc458-1b3b-40a4-9e73-dea9023d271e",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
+   "id": "9e38cdd1-0346-4572-b0ed-c4d8c1cb4d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li = [1,2,[9,6,4,2],7,5,6,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b5ddbe87-33af-426a-b651-89d3ec839906",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "id": "386816b0-a949-49ca-8ed9-4c1e6693b0f2",
    "metadata": {},
    "outputs": [],
@@ -228,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "8e2dcbd9-380b-48de-8c92-a56893e28f64",
+   "execution_count": 64,
+   "id": "c0d211c6-f4d0-4f56-a04d-83fb248b3848",
    "metadata": {},
    "outputs": [
     {
@@ -267,19 +298,19 @@
        "45"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "addList([1,2,[9,6,4,2],7,5,6,3])"
+    "addList(li)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af846024-b956-49b4-a691-8c89c5c74fab",
+   "id": "3a27597c-378b-4f33-b2eb-de153f8abff0",
    "metadata": {},
    "outputs": [],
    "source": []
