--- a/17 Recursion .ipynb
+++ b/17 Recursion .ipynb
@@ -221,28 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "b5ddbe87-33af-426a-b651-89d3ec839906",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(li)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "id": "386816b0-a949-49ca-8ed9-4c1e6693b0f2",
    "metadata": {},
    "outputs": [],
@@ -250,7 +229,7 @@
     "def addList(li):\n",
     "    print(li)\n",
     "    if type(li) is int:\n",
-    "        return li\n",
+    "        return(li)\n",
     "    elif len(li)==0:\n",
     "        return 0\n",
     "    abc =  addList(li[0]) + addList(li[1:])\n",
@@ -259,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "id": "c0d211c6-f4d0-4f56-a04d-83fb248b3848",
    "metadata": {},
    "outputs": [
@@ -298,7 +277,7 @@
        "45"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a27597c-378b-4f33-b2eb-de153f8abff0",
+   "id": "5efd706e-724b-4dcd-bb35-4978b06b984a",
    "metadata": {},
    "outputs": [],
    "source": []
